<resources>
    <string name="app_name">Buka ea khale</string>
    <string name="txtSotho">Sesotho Bible</string>
    <string name="txtRead">Read Bible</string>
    <string name="txtBala">Bala Bible</string>
    <string name="txtSearch">Search Scripture</string>
    <string name="txtBatla">Batla lengolo</string>
    <string name="txtRate">Rate App</string>
    <string name="txtHlahloba">Hlahloba App</string>
    <string name="txtSettings">Settings</string>
    <string name="txtLisetting">Lisetting</string>
    <string name="txtFeedBack">Contact Us</string>
    <string name="txtBuaLerona">Bua le rona</string>
    <string name="txtAboutApp">About App</string>
    <string name="txtTsaApp">Ka App</string>
    <string name="txtAbout">About Us</string>

    <string name="ot"><u>Testamente ea khale</u></string>
    <string name="nt"><u>Testamente e ncha</u></string>

    <string name="saints">Hello Saints!</string>
    <string name="rate">If this app is helpful to you, please take your time and rate it with maximum stars. Few minutes of your time!</string>
    <string name="rate1">This will help us know that we are in a right direction to giving you a perfect user experience. Also, please feel free to report any issues as well as suggestions.</string>
    <string name="about">This bible fondly called buka ea khale, is a translation of an english bible (KJV). It is in Sesotho, one of the official languages in South Africa and the most spoken language in Lesotho.</string>
    <string name="talkTome">Alternatively, you can send us a message directly to the following email : <b>molorane.mothusi@gmail.com</b></string>
    <string name="title_activity_book">Buka</string>
    <string name="bookVerse">0</string>
    <string name="tab_book">Buka</string>
    <string name="tab_chapter">Khaolo</string>
    <string name="tab_verse">Temana</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="book_fragment">Book fragment</string>
    <string name="chapter_fragment">Chapter fragment</string>
    <string name="verse_fragment">Verse fragment</string>
    <string name="_100">100</string>

    <string name="sblack">Scripture in black</string>
    <string name="sred">Scripture in red</string>
    <string name="vOne">1</string>
    <string name="supportedVersion">Android 4.4+</string>


    <!-- Contact Form -->
    <string name="senderName">Name</string>
    <string name="senderEmail">Email</string>
    <string name="enterName">Enter name</string>
    <string name="enterEmail">Enter email</string>
    <string name="senderFeedback">Feedback</string>
    <string name="enterFeedback">Enter feedback</string>
    <string name="send">Send</string>
    <string name="txtBatlaLengolo">Batla Lengolo</string>
    <string name="searchText">Batla</string>
    <string name="enterSearch">Example "Jesu a lla"</string>
    <string name="matcWholeText">Match whole words only</string>
    <string name="searchWholeBible">Search entire Bible</string>
    <string name="limitSearch">Limit search to</string>
    <string name="SearchFrom">Search from</string>
    <string name="txtFrom">From</string>
    <string name="txtTo">To</string>
    <string name="txtHome">Home</string>
</resources>