<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedBack">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/ic_wave_feed_back">

        <ImageView
            android:id="@+id/UselessParent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/txtSotho"
            android:textColor="@color/pinkDark"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnAboutBible"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-25dp"
        app:cardCornerRadius="1dp">

        <LinearLayout
            android:background="@color/pinkAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/txtFeedBack" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/senderName"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/txtSenderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:ems="20"
                    android:hint="@string/enterName"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/senderEmail"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/txtSenderEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/enterEmail"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

            </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/senderFeedback"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/txtSenderFeedBack"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:padding="10dp"
                        android:gravity="start|top"
                        android:hint="@string/enterFeedback"
                        android:inputType="textMultiLine"
                        android:background="@drawable/edit_text_bg" />

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btnSendEmail"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:theme="@style/ThemeOverlay.AppCompat.Light"/>
            </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>