<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".About">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/ic_wave_bg_header">

        <ImageView
            android:id="@+id/UselessParent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/txtSothoBible"
            android:textColor="@color/pinkDark"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnAboutBible"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-25dp"
        app:cardCornerRadius="1dp">

        <LinearLayout
            android:background="@color/pinkAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/txtAboutApp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saints"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"
                    android:textStyle="normal"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate1"
                    android:textStyle="normal"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textStyle="normal"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/talkTome"
                    android:textStyle="normal"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_marginTop="30sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/supportedVersion"
                    android:layout_marginStart="90dp"
                    android:textSize="18sp"/>

            </LinearLayout>
        </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>