<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Search">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/ic_wave_feed_back">

        <ImageView
            android:id="@+id/UselessParent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/txtSotho"
            android:textColor="@color/pinkDark"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnAboutBible"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="-40dp"
        app:cardCornerRadius="1dp">

        <LinearLayout
            android:background="@color/pinkAccent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/txtSearch" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtSenderName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_bg"
                        android:ems="20"
                        android:hint="@string/enterSearch"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spMatchMode"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/matcWholeText" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <RadioButton
                        android:id="@+id/radioButtonSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/searchWholeBible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioLimitSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/limitSearch" />

                    <Spinner
                        android:layout_marginTop="-15dp"
                        android:id="@+id/spLimitSearch"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="120dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioSearchFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SearchFrom" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="-15dp"
                    android:id="@+id/layoutSearchFrom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:gravity="right"
                                    android:textAlignment="gravity"
                                    android:text="@string/txtFrom"
                                    android:textSize="16sp" />

                                <Spinner
                                    android:id="@+id/spFrom"
                                    android:layout_weight=".8"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/txtTo"
                                    android:gravity="right"
                                    android:textAlignment="gravity"
                                    android:textSize="16sp" />

                                <Spinner
                                    android:layout_weight=".8"
                                    android:id="@+id/spTo"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />

                            </LinearLayout>

                        </TableRow>

                    </TableLayout>







                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnSendEmail"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/searchText"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>